--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,20 @@
 # vi:syntax=json
 {
-  "extends": "airbnb-base",
-  "env": {
-    "mocha": true,
-    "node": true
-  },
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "script",
-    "ecmaFeatures": {
-      "modules": false
+    "extends": "airbnb-base",
+    "env": {
+      "mocha": true,
+      "node": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "modules": false
+      }
+    },
+    "rules": {
+      "strict": [0],
+      "no-param-reassign": [2, { "props": false }],
+      "no-underscore-dangle": [2, { "allow": ["_id", "_hasOpened", "__parent"] }]
     }
-  },
-  "rules": {
-    "strict": [2, "global"],
-    "no-param-reassign": [2, { "props": false }]
-  }
 }
