feat(auth): get OAuth user data method

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - mongo
     volumes:
       - .:/usr/src/app
+    env_file: .env
     environment:
       - NODE_ENV=development
       - NPM_CONFIG_LOGLEVEL=silent
