fix(test) set test timeout to 10000 ms

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "nsp": "nsp check",
     "semantic-release": "semantic-release",
     "start": "supervisor -w index.js,lib -e js index.js",
-    "test": "mocha -b -c --check-leaks -R tap -r test/support/env test/**",
-    "test:watch": "mocha -w -b -c --check-leaks -R progress -r test/support/env test/**",
+    "test": "mocha -b -c -t 10000 --check-leaks -R tap -r test/support/env test/**",
+    "test:watch": "mocha -w -b -c -t 10000 --check-leaks -R progress -r test/support/env test/**",
     "greenkeeper-postpublish": "greenkeeper-postpublish"
   },
   "repository": {
