--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cover": "istanbul cover --report lcovonly ./node_modules/.bin/_mocha -- -t 10000 -r test/support/env -R spec test/**",
     "grunt:watch": "grunt watch",
     "lint": "eslint *.js lib/ models/ test/",
+    "lint:watch": "esw --watch *.js lib/ models/ test/",
     "nsp": "nsp check",
     "semantic-release": "semantic-release",
     "start": "supervisor -w index.js,lib -e js index.js",
@@ -58,6 +59,7 @@
     "eslint": "^3.1.1",
     "eslint-config-airbnb-base": "^5.0.0",
     "eslint-plugin-import": "^1.11.1",
+    "eslint-watch": "^2.1.14",
     "greenkeeper-postpublish": "^1.0.0",
     "istanbul": "^0.4.3",
     "mocha": "^3.0.0",
