--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cover": "istanbul cover --report lcovonly ./node_modules/.bin/_mocha -- -t 10000 -r test/support/env -R spec test/*.js test/**/*.js",
     "grunt:watch": "grunt watch",
     "lint": "eslint *.js lib/ models/ test/",
-    "lint:watch": "esw --watch *.js lib/ models/ test/",
+    "lint:watch": "esw --color --watch *.js lib/ models/ test/",
     "nsp": "nsp check",
     "semantic-release": "semantic-release",
     "start": "supervisor -w index.js,lib -e js index.js",
