feat(checkin): validate user checkin coordinates
Validate that a user is within a given radius from the checkin point
coordinates when checking in. Radius is configurable using environment
variable `CHECKIN_MAX_DISTANCE`.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "express": "^4.13.4",
+    "geoutil": "^1.2.0",
     "mongoose": "^4.4.13",
     "newrelic": "^1.28.0",
     "node-fetch": "^1.6.0",
