--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,4 +28,5 @@ services:
       - VIRTUAL_HOST=sjekkut.app.dnt.privat
       - VIRTUAL_PORT=8080
       - VIRTUAL_PATH=/api/v2/
+      - CHECKIN_MAX_DISTANCE=200
     command: npm start
