--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint": "^3.1.1",
     "eslint-config-airbnb-base": "^7.0.0",
     "eslint-plugin-import": "^1.11.1",
+    "eslint-plugin-mocha": "^4.5.1",
     "eslint-watch": "^2.1.14",
     "greenkeeper-postpublish": "^1.0.0",
     "istanbul": "^0.4.3",
