--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     },
     "rules": {
       "strict": [0],
+      "arrow-parens": [2, "as-needed", { "requireForBlockBody": false }],
       "no-param-reassign": [2, { "props": false }],
       "no-underscore-dangle": [2, { "allow": ["_id", "_hasOpened", "__parent"] }],
       "mocha/no-exclusive-tests": "error"
