--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -11,7 +11,7 @@ verdandi-node-v2:
     - NEW_RELIC_NO_CONFIG_FILE=true
     - NODE_ENV=production
     - NTB_API_ENV=dev
-    - 'VIRTUAL_HOST=http://sjekkut.app2.dnt.no/v2/*,https://sjekkut.app2.dnt.no/v2/*'
+    - 'VIRTUAL_HOST=http://sjekkut.app.dnt.no/v2/*,https://sjekkut.app.dnt.no/v2/*'
     - VIRTUAL_PATH=/v2
     - VIRTUAL_PORT=8080
   expose:
