chore(wercker): add --sync option
Just to make sure.

--- a/wercker.yml
+++ b/wercker.yml
@@ -43,7 +43,7 @@ docker:
         name: docker stack update
         code: |
           pip install docker-cloud
-          docker-cloud stack update $DOCKERCLOUD_STACK_NAME
+          docker-cloud stack update $DOCKERCLOUD_STACK_NAME --sync
 
     - script:
         name: docker hub build
