--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -1,3 +1,9 @@
+secrets:
+  image: 'turistforeningen/verdandi-secrets:v3'
+  tags:
+    - app
+  volumes:
+    - /secrets
 verdandi-node-v2:
   autoredeploy: true
   environment:
@@ -23,3 +29,5 @@ verdandi-node-v2:
   tags:
     - app
   target_num_containers: 2
+  volumes_from:
+    - 'secrets:ro'
