--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -20,6 +20,7 @@ verdandi-node-v2:
     - 'VIRTUAL_HOST=http://sjekkut.app.dnt.no/*,https://sjekkut.app.dnt.no/*'
     - VIRTUAL_PATH=/v2
     - VIRTUAL_PORT=8080
+    - VIRTUAL_HOST_WEIGHT=20
   expose:
     - '8080'
   image: 'turistforeningen/verdandi:v2'
