--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
     "express": "^4.13.4",
     "geoutil": "^1.2.0",
     "mongoose": "^4.4.13",
+    "multer": "^1.2.1",
     "newrelic": "^1.28.0",
     "node-fetch": "^1.6.0",
     "raven": "^0.12.0",
-    "response-time": "^2.3.1"
+    "response-time": "^2.3.1",
+    "s3-uploader": "^2.0.3",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "codacy-coverage": "^2.0.0",
