chore(environment): add `AWS_BUCKET_URL` env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - AWS_BUCKET_NAME=sjekkut
       - AWS_BUCKET_PATH=dev/
       - AWS_BUCKET_REGION=eu-west-1
+      - AWS_BUCKET_URL=sjekkut.s3.amazonaws.com/
       - CHECKIN_MAX_DISTANCE=200
       - CHECKIN_TIMEOUT=86400
       - CHOKIDAR_USEPOLLING=true
