--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -37,6 +37,7 @@ verdandi-node-v3:
     - AWS_BUCKET_NAME=sjekkut
     - AWS_BUCKET_PATH=dev/
     - AWS_BUCKET_REGION=eu-west-1
+    - AWS_BUCKET_URL=sjekkut.s3.amazonaws.com/
     - CHECKIN_MAX_DISTANCE=50
     - CHECKIN_TIMEOUT=60
     - FORCE_SSL=true
