--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     network_mode: 'bridge'
     ports:
       - '27019:27017'
+    volumes:
+      - /data/db
 
   node:
     image: node:6
