--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "multer": "^1.2.1",
     "newrelic": "^1.28.0",
     "node-fetch": "^1.6.0",
+    "node-statsd": "^0.1.1",
     "raven": "^0.12.0",
     "response-time": "^2.3.1",
     "s3-uploader": "^2.0.3",
