--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -48,6 +48,8 @@ verdandi-node-v3:
     - NEW_RELIC_NO_CONFIG_FILE=true
     - NODE_ENV=production
     - NTB_API_ENV=api
+    - STATSD_HOST=statsd
+    - STATSD_PORT=8125
     - 'VIRTUAL_HOST=http://sjekkut.app.dnt.no/api/v3*,https://sjekkut.app.dnt.no/api/v3*'
     - VIRTUAL_HOST_WEIGHT=20
     - VIRTUAL_PATH=/api/v3
@@ -57,6 +59,7 @@ verdandi-node-v3:
   image: 'turistforeningen/verdandi:v3'
   links:
     - 'mongo.mongo:mongo'
+    - 'statsd.statsd-librato:statsd'
   restart: always
   tags:
     - app
