--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -66,8 +66,16 @@ verdandi-node-v3:
     - 'mongo-02.mongo-rs:mongo-02'
     - 'mongo-03.mongo-rs:mongo-03'
     - 'statsd.statsd-librato:statsd'
+    - 'urdr-redis:redis'
   restart: always
   tags:
     - app
   volumes_from:
     - 'secrets:ro'
+urdr-redis:
+  autoredeploy: true
+  command: redis-server --appendonly yes
+  image: 'redis:3.0'
+  restart: on-failure
+  tags:
+    - app
