--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,10 @@
-version: '2'
+version: "2"
 
 services:
   mongo:
-    image: mongo:2
-    network_mode: 'bridge'
-    logging:
-      options:
-        max-size: "500k"
-
-  node:
-    image: node:7
-    working_dir: /usr/src/app
-    network_mode: 'bridge'
+    image: mongo:4.2
     ports:
-      - '8080'
-    links:
-      - mongo
-      - redis
-    depends_on:
-      - mongo
-      - redis
-    volumes:
-      - .:/usr/src/app
-    env_file: secrets/dev.env
+      - "6079:27017"
     logging:
       options:
         max-size: "500k"
-    environment:
-      - AWS_BUCKET_NAME=sjekkut
-      - AWS_BUCKET_PATH=dev/
-      - AWS_BUCKET_REGION=eu-west-1
-      - 'AWS_BUCKET_URL=https://sjekkut.s3.amazonaws.com/'
-      - CHECKIN_MAX_DISTANCE=200
-      - CHECKIN_TIMEOUT=1
-      - CHOKIDAR_USEPOLLING=true
-      - 'MONGO_URI=mongodb://mongo-01.db.dnt.local:27100,mongo-02.db.dnt.local:27200/verdandi-prod?replicaSet=rs0'
-      - NODE_ENV=development
-      - NPM_CONFIG_LOGLEVEL=silent
-      - NPM_CONFIG_PROGRESS=false
-      - NPM_CONFIG_SPIN=false
-      - VIRTUAL_HOST=sjekkut.app.dnt.local
-      - VIRTUAL_PORT=8080
-      - VIRTUAL_PATH=/api/v3
-    extra_hosts:
-      - "mongo-01.db.dnt.local:${DOCKER_IP}"
-      - "mongo-02.db.dnt.local:${DOCKER_IP}"
-    command: npm start
-  redis:
-    image: redis:3
-    network_mode: 'bridge'
-    logging:
-      options:
-        max-size: "10k"
